Fixed z-index
Former z-index disallowed displaying the js effect over the header and footer

--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -10;
+    /*z-index: 0;*/
 }
 
 #jslicense-labels1 {
